# fifteen-puzzle

./: .gitignore  LICENSE  README.md  algo_utils.py  algorithms.py  constants.py  exceptions.py  factory.py  main.py  parsing_utils.py  pyproject.toml  script_utils.py  setup.cfg  solution_viewer.py  tox.ini
.github/workflows/: tests.yml
src/fifteen-puzzle/: algorithms.py  main.py  parsing_utils.py
src/fifteen_puzzle/: algo_utils.py  algorithms.py  constants.py  exceptions.py  factory.py  main.py  parsing_utils.py  solution_viewer.py
tests/: conftest.py  test_algo_utils.py  test_integration.py  test_parsing_utils.py  test_puzzle_node.py
tests/prepared_boards/: input1.15sav  input10.15sav  input11.15sav  input12.15sav  input2.15sav  input3.15sav  input4.15sav  input5.15sav  input6.15sav  input7.15sav  input8.15sav  input9.15sav
