[metadata]
name = fifteen_puzzle
description = provides solution finder for fifteen-puzzle game
author = odpaleniek1337
version = 0.0.2
license = MIT
license_file = LICENSE
classifiers = 
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
packages = 
    fifteen_puzzle
python_requires = >=3.8.10
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.0
    pytest-cov>=3.0

[flake8]
max-line-length = 110
noqa-require-code = true
exclude =
  build,
  bin,
  lib,
  include,
  @*,
  out,
  .git,
  .tox
extend-ignore = F405